--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <html>
 	<head>
 		<title>Django blog</title>
@@ -5,6 +7,7 @@
 	<body>
 		<header>
 			<h1><a hred="{% url 'home' %}">Django blog</a></h1>
+			<link href="{% static 'css/base.css' %}" rel="stylesheet">
 		</header>
 		
 		<div>
