--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 	<body>
 		<header>
 			<h1><a hred="{% url 'home' %}">Django blog</a></h1>
+			<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
 			<link href="{% static 'css/base.css' %}" rel="stylesheet">
 		</header>
 		
