--- a/templates/base.html
+++ b/templates/base.html
@@ -3,14 +3,20 @@
 <html>
 	<head>
 		<title>Django blog</title>
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
+		<link href="{% static 'css/base.css' %}" rel="stylesheet">
 	</head>
 	<body>
+		<div>
 		<header>
+		<div class="nav-left">
 			<h1><a hred="{% url 'home' %}">Django blog</a></h1>
-			<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400" rel="stylesheet">
-			<link href="{% static 'css/base.css' %}" rel="stylesheet">
+		</div>
+		<div class="nav-right">
+			<a href="{% url 'post_new' %}">+ New Blog Post</a>
+		</div>
 		</header>
-		
+		</div>
 		<div>
 		{% block content %}
 		{% endblock content %}
