--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,12 @@
 		</div>
 		</header>
 		</div>
+		{% if user.is_authenticated %}
+			<p>Hi {{ user.username }}!</p>
+		{% else %}
+			<p>You are not logged in.</p>
+			<a href="{% url 'login' %}">Log In</a>
+		{% endif %}
 		<div>
 		{% block content %}
 		{% endblock content %}
