--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 		<div>
 		<header>
 		<div class="nav-left">
-			<h1><a hred="{% url 'home' %}">Django blog</a></h1>
+			<h1><a href="{% url 'home' %}">Django blog</a></h1>
 		</div>
 		<div class="nav-right">
 			<a href="{% url 'post_new' %}">+ New Blog Post</a>
@@ -19,6 +19,7 @@
 		</div>
 		{% if user.is_authenticated %}
 			<p>Hi {{ user.username }}!</p>
+			<p><a href="{% url 'logout' %}">Log Out</a></p>
 		{% else %}
 			<p>You are not logged in.</p>
 			<a href="{% url 'login' %}">Log In</a>
